--- a/elearning-html-template/scss/bootstrap.scss
+++ b/elearning-html-template/scss/bootstrap.scss
@@ -6,7 +6,7 @@ $dark: #181d38;
 
 $font-family-base: 'Heebo', sans-serif;
 
-$headings-font-family: 'Nunito', sans-serif;
+$headings-font-family: 'Courier New', Courier, monospace;
 
 $body-color: #52565b;
 
