--- a/elearning-html-template/css/style.css
+++ b/elearning-html-template/css/style.css
@@ -432,3 +432,13 @@
     padding-right: 0;
     border-right: none;
 }
+
+.small-header {
+
+}
+
+@media (max-width: 500px) {
+    .small-header {
+        display: none;
+    }
+}
